--- a/frontend/src/Login.css
+++ b/frontend/src/Login.css
@@ -1,6 +1,6 @@
 .login {
   display: grid;
-  background-color: #303030;
+  background-color: #f9f7f7;
   height: 100vh;
   width: 100vw;
   place-items: center;
@@ -9,10 +9,10 @@
 .login_container {
   padding: 100px;
   text-align: center;
-  background-color: #3f3f3f;
+  background-color: #ffffff;
   border-radius: 10px;
-  color: beige;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px;
+  color: black;
+  box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.25);
 }
 
 .login_container > img {
