--- a/frontend/src/Chat.css
+++ b/frontend/src/Chat.css
@@ -23,7 +23,7 @@
 }
 
 .chat_header_info > p {
-  color: #e1e6e2;
+  color: #127ad5;
   font-size: 0.8em;
 }
 
@@ -33,7 +33,7 @@
   padding: 30px;
   overflow-y: auto;
   /* background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png"); */
-  background-color: #544f51;
+  background-color: #f9f7f7;
   background-position: center;
   background-repeat: repeat;
 }
@@ -42,10 +42,11 @@
   position: relative;
   width: fit-content;
   padding: 10px;
-  border-radius: 10px;
+  padding-left: 20px;
+  border-radius: 25px 25px 25px 0;
   font-size: 16px;
-  background-color: #fbf1df;
-  color: #1f2933;
+  background-color: #e6e4e4;
+  color: #127ad5;
   margin-bottom: 30px;
   max-width: 20vw;
   overflow-wrap: break-word;
@@ -63,13 +64,15 @@
   top: -15px;
   font-size: xx-small;
   font-weight: 800;
-  color: whitesmoke;
+  color: teal;
 }
 
 .receive {
   margin-left: auto;
-  background-color: #fbf1df;
-  color: #1f2933;
+  background-color: #127ad5;
+  color: white;
+  padding-left: 20px;
+  border-radius: 25px 25px 0 25px;
 }
 
 .chat_inputbar {
