--- a/frontend/src/SidebarChat.css
+++ b/frontend/src/SidebarChat.css
@@ -6,15 +6,15 @@
   border-radius: 20px;
   margin: 10px 5px;
   height: min-content;
-  background-color: #fbf1df;
-  color: #423c3e;
-  -webkit-filter: drop-shadow(1px 1px 2px #423c3e);
-  filter: drop-shadow(1.2px 5px 1px #423c3e);
+  background-color: white;
+  color: #127ad5;
+  -webkit-filter: drop-shadow(1px 1px 1px #423c3e);
+  filter: drop-shadow(0.5px 1px 1px #127ad5);
 }
 
 .sidebarChat:hover {
-  background-color: #423c3e;
-  color: #fbf1df;
+  background-color: #127ad5;
+  color: white;
 }
 
 .chat_info > h3 {
@@ -31,7 +31,7 @@
 }
 a {
   text-decoration: none;
-  color: #423c3e;
+  color: #127ad5;
 }
 
 .add {
@@ -39,20 +39,20 @@ a {
   flex: 1;
   /* justify-content: center; */
   align-items: center;
-  background-color: #fbf1df;
+  background-color: white;
 }
 .add > .MuiSvgIcon-root {
   font-size: 3em;
-  color: #423c3e;
+  color: #127ad5;
 }
 .add > h3 {
   font-size: 1.5em;
-  color: #423c3e;
+  color: #127ad5;
   padding: 5px 20px;
 }
 .add:hover > h3 {
-  color: #fbf1df;
+  color: white;
 }
 .add:hover > .MuiSvgIcon-root {
-  color: #fbf1df;
+  color: #127ad5;
 }
